# CosinorAge

./: .coverage  .gitattributes  .gitignore  .readthedocs.yaml  README.md  TODO.txt  make.bat  package-lock.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
R/: Convert_raw actigraph gt3x_to ENMO.R
cosinorage/: ___init__.py  __init__.py
cosinorage.egg-info/: PKG-INFO  SOURCES.txt
cosinorage/bioage/: __init__.py
cosinorage/bioages/: __init__.py  biages.py  bioages.py  cosinorage.py
cosinorage/datahandlers/: __init__.py  datahandler.py  datahandlers.py  galaxydatahandler.py  genericdatahandler.py  nhanesdatahandler.py  ukbdatahandler.py
cosinorage/dataloader/: __init__.py  _enmo.py  _plot.py  dataloaders.py  enmo.py  loader.py  plot.py  utility.py
cosinorage/dataloaders/: __init__.py  dataloaders.py
cosinorage/features/: __init__.py  bulk_features.py  features.py
docs/: .buildinfo  cosinorage.features.html  make.bat
docs/.doctrees/: cosinorage.dataloaders.doctree  environment.pickle
docs/doctrees/: cosinorage.bioages.doctree  (+4 more)
docs_source/: Makefile
examples/: CosinorAge.code-workspace  bulk_example.ipynb  data_loading.ipynb  galaxy_binary_example.ipynb  galaxy_csv_example.ipynb  galaxy_example.ipynb  galaxy_unified_example.py  generic_example.ipynb  nhanes_example.ipynb  sleep_classification.ipynb  smartwatch_example.ipynb  ukb_cosinorage.py  ukb_example.ipynb  ukbiobank_expample.ipynb
paper/: paper.bib  paper.md
source/: conf.py  dataloader.rst  index.rst
tests/: test_dataloader.py  test_dataloaders.py
(+82 files in other folders)
