[tool.poetry]
name = "cosinorage"
version = "0.1.0"
description = ""
authors = ["Jacob Leo Oskar Hunecke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
numpy = "^2.0.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
